--- a/nerds-catalog.html
+++ b/nerds-catalog.html
@@ -13,29 +13,37 @@
         <nav class="main-navigation">
           <ul>
             <li>
-              <a href="#">Студия</a>
+            <a href="#">Студия</a>
             </li>
             <li>
-              <a href="#">Клиенты</a>
+            <a href="#">Клиенты</a>
             </li>
             <li>
-              <a href="#">Магазин</a>
+            <a href="#">Магазин</a>
             </li>
             <li>
-              <a href="#">Контакты</a>
+            <a href="#">Контакты</a>
             </li>
           </ul>
         </nav>
         <div class="user-block">
           <a class="trash" href="#">Корзина</a>
         </div>
-        <p class="main-title">Магазин готовых шаблонов</p>
       </div>
-      </header>
-      <main class="container">
+    </header>
+    <main class="container">
+        <p class="main-title">Магазин готовых шаблонов</p>
       <form>
         <div class="price">
           <p>Стоимость</p>
+          <div class="range-slider">
+            <div class="range-slider__back ">1
+            </div>
+            <div class="range-slider__controls ">2
+            </div>
+          </div>
+          <p>От</p>
+          <p>До</p>
         </div>
         <div class="type">
           <p class="type-title">Сетка</p>
@@ -57,45 +65,70 @@
         <p class="sort-title">Сортировать</p>
         <ul>
           <li>
-            <a href="#">По цене</a>
+          <a href="#">По цене</a>
           </li>
           <li>
-            <a href="#">По типу</a>
+          <a href="#">По типу</a>
           </li>
           <li>
-            <a href="#">По названию</a>
+          <a href="#">По названию</a>
+          </li>
+          <li>
+          <a href="#">&#9650</a>
+          </li>
+          <li>
+          <a href="#">&#9660</a>
           </li>
         </ul>
       </div>
       <div class="products">
-        <img src="http://placehold.it/70x150">
-        <img src="http://placehold.it/70x150">
-        <img src="http://placehold.it/70x150">
-        <img src="http://placehold.it/70x150">
-      </div>
-      <a class="page-number" href="#">1</a>
-      <a class="page-number" href="#">2</a>
-      <a class="page-number" href="#">3</a>
-      <a class="page-number" href="#">Следующая</a>
+        <div class="products__item">
+          <div class="products__item-sedona">
+            <a href="#"><img src="http://placehold.it/150x200"></a>
+          </div>
+          <div class="products__item-pink">
+            <a href="#"><img src="http://placehold.it/150x200"></a>
+          </div>
+          <div class="products__item-barbershop">
+            <a href="barbershop"><img src="http://placehold.it/150x200"></a>
+          </div>
+          <div class="products__item-mishka">
+            <a href="#"><img src="http://placehold.it/150x200"></a>
+          </div>
+          <div class="products__item-a-plus">
+            <a href="#"><img src="http://placehold.it/150x200"></a>
+          </div>
+          <div class="products__item-kvast">
+            <a href="#"><img src="http://placehold.it/150x200"></a>
+          </div>
+       </div>
+     </div>
+    <div class="page-number">
+       <a class="page-number_item" href="#">1</a>
+       <a class="page-number_item" href="#">2</a>
+       <a class="page-number_item" href="#">3</a>
+       <a class="page-number_item" href="#">Следующая</a>
+    </div>
     </main>
     <footer class="main-footer">
       <div class="container">
         <img src="http://placehold.it/300x300">
-        <section class="footer-contacts">
+         <section class="footer-contacts">
           <h1>nerds design studio</h1>
-          <pre>
+          <p>
             191186, Санкт-Петербург,
             ул.Б.Конюшенная,д.19/8
-            тел.+7(812)275-75-75</pre>
+            тел.+7(812)275-75-75</p>
             <a href="#">Напишите нам</a>
-          </section>
-          <section class="footer-social">
-            <a class="social-btn-vk" href="#">Вконтакте</a>
-            <a class="social-btn-fb" href="#">Фейсбук</a>
-            <a class="social-btn-inst" href="#">Инстаграм</a>
-            <h1>Давайте дружить, это выгодно!</h1>
-            <p>Скидка 10% для друзей из социальных сетей</p>
-          </section>
-        </footer>
-      </body>
+        </section>
+        <section class="footer-social">
+          <a class="social-btn-vk" href="#">Вконтакте</a>
+          <a class="social-btn-fb" href="#">Фейсбук</a>
+          <a class="social-btn-inst" href="#">Инстаграм</a>
+          <h1>Давайте дружить, это выгодно!</h1>
+          <p>Скидка 10% для друзей из социальных сетей</p>
+        </section>
+      </div>
+    </footer>
+  </body>
 </html>
