--- a/nerds-index.html
+++ b/nerds-index.html
@@ -29,35 +29,52 @@
         <div class="user-block">
           <a class="trash" href="#">Корзина</a>
         </div>
-        <h1 class="main-features">Долго, дорого, скурпулезно.</h1>
-        <pre class="main-features_description">
-          Математический выверенный дизайн
-          для вашего сайта или мобильного приложения.</pre>
-          <a class="btn" href="#">Узнать больше</a>
-      </div>
+        </div>
       </header>
       <main class="container">
+        <div class="slider">
+          <div class="slider__list">
+            <div class="slider__item_word1">
+            <h1>Долго, дорого, скурпулезно.</h1>
+            <p>Математический выверенный дизайн
+              для вашего сайта или мобильного приложения.</p>
+            <a class="btn" href="#">Узнать больше</a>
+            </div>
+            <div class="slider__item_word2">
+            <h1>qwerty</h1>
+            <p>wqerty</p>
+            <a class="btn" href="#">Узнать больше</a>
+            </div>
+            <div class="slider__item_word3">
+            <h1>qwerty</h1>
+            <p>wqerty</p>
+            <a class="btn" href="#">Узнать больше</a>
+            </div>
+          </div>
+          <div class="slider__control_item">
+          </div>
+        </div>
         <div class="products">
           <article class="products_web">
+           <img src="http://placehold.it/300x300">
+           <h1>Веб-сайты</h1>
+           <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+           <a class="btn" href="#">Заказать</a>
+          </article>
+         <article class="products_app">
           <img src="http://placehold.it/300x300">
-          <h1>Веб-сайты</h1>
-          <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+          <h1>Приложения</h1>
+          <p>Покорите топ-10 приложений в AppStore и Google Play</p>
           <a class="btn" href="#">Заказать</a>
         </article>
-        <article class="products_app">
-        <img src="http://placehold.it/300x300">
-        <h1>Приложения</h1>
-        <p>Покорите топ-10 приложений в AppStore и Google Play</p>
-        <a class="btn" href="#">Заказать</a>
-      </article>
-      <article class="products_presentation">
-      <img src="http://placehold.it/300x300">
-      <h1>Презентации</h1>
-      <p>Вы даже не подозреваете, насколько вы изумительны!</p>
-      <a class="btn" href="#">Заказать</a>
-      </article>
-      </div>
-      <div class="about">
+        <article class="products_presentation">
+         <img src="http://placehold.it/300x300">
+         <h1>Презентации</h1>
+         <p>Вы даже не подозреваете, насколько вы изумительны!</p>
+         <a class="btn" href="#">Заказать</a>
+        </article>
+       </div>
+       <div class="about">
         <h1>Мы-маленькая, но гордая дизайн-студия из Краснодара.</h1>
         <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем непокладая рук, как роботы.</p>
         <p>Выполняем заказы на разработку:</p>
@@ -68,19 +85,20 @@
         </ul>
       </div>
       <div class="diagram">
-          <img src="http://placehold.it/175x125">
-          <p>С 2004 года людим точность во всем:</p>
-          <table class="diagram_procent">
-            <tr>
-              <td>146%</td>
-              <td>100%</td>
-              <td>50%</td>
-            </tr>
-            <tr>
-              <td>Уровень самоотдачи</td>
-              <td>Соблюдение сроков</td>
-              <td>Минимальная предоплата</td>
-            </tr>
+        <img src="http://placehold.it/175x125">
+        <p>С 2004 года людим точность во всем:</p>
+        <table class="diagram_procent">
+          <tr>
+            <td>146%</td>
+            <td>100%</td>
+            <td>50%</td>
+          </tr>
+          <tr>
+            <td>Уровень самоотдачи</td>
+            <td>Соблюдение сроков</td>
+            <td>Минимальная предоплата</td>
+          </tr>
+        </table>
       </div>
       <section class="works">
         <a class="works_html_academy" href="#">html academy</a>
@@ -94,19 +112,20 @@
         <img src="http://placehold.it/300x300">
         <section class="footer-contacts">
           <h1>nerds design studio</h1>
-          <pre>
+          <p>
             191186, Санкт-Петербург,
             ул.Б.Конюшенная,д.19/8
-            тел.+7(812)275-75-75</pre>
+            тел.+7(812)275-75-75</p>
             <a href="#">Напишите нам</a>
-          </section>
-          <section class="footer-social">
-            <a class="social-btn-vk" href="#">Вконтакте</a>
-            <a class="social-btn-fb" href="#">Фейсбук</a>
-            <a class="social-btn-inst" href="#">Инстаграм</a>
-            <h1>Давайте дружить, это выгодно!</h1>
-            <p>Скидка 10% для друзей из социальных сетей</p>
-          </section>
-        </footer>
-      </body>
+        </section>
+        <section class="footer-social">
+          <a class="social-btn-vk" href="#">Вконтакте</a>
+          <a class="social-btn-fb" href="#">Фейсбук</a>
+          <a class="social-btn-inst" href="#">Инстаграм</a>
+          <h1>Давайте дружить, это выгодно!</h1>
+          <p>Скидка 10% для друзей из социальных сетей</p>
+        </section>
+      </div>
+    </footer>
+  </body>
 </html>
