--- a/nerds-catalog.html
+++ b/nerds-catalog.html
@@ -32,17 +32,15 @@
       </div>
     </header>
     <main class="container">
-        <p class="main-title">Магазин готовых шаблонов</p>
+        <h1 class="main-title">Магазин готовых шаблонов</h1>
       <form>
         <div class="price">
           <p>Стоимость</p>
-          <div class="range-slider">
-            <div class="range-slider__back ">1
-            </div>
-            <div class="range-slider__controls ">2
-            </div>
+          <div id="range-slider">
+          <input type="range" min="0" max="15000" step="50" multiple>
           </div>
-          <p>От</p>
+          <label>От<input></label>
+          <label>До<input></label>
           <p>До</p>
         </div>
         <div class="type">
@@ -85,21 +83,27 @@
         <div class="products__item">
           <div class="products__item-sedona">
             <a href="#"><img src="http://placehold.it/150x200"></a>
+            <a href="#"><img src="http://placehold.it/150x50"></a>
           </div>
           <div class="products__item-pink">
             <a href="#"><img src="http://placehold.it/150x200"></a>
+            <a href="#"><img src="http://placehold.it/150x50"></a>
           </div>
           <div class="products__item-barbershop">
             <a href="barbershop"><img src="http://placehold.it/150x200"></a>
+            <a href="#"><img src="http://placehold.it/150x50"></a>
           </div>
           <div class="products__item-mishka">
             <a href="#"><img src="http://placehold.it/150x200"></a>
+            <a href="#"><img src="http://placehold.it/150x50"></a>
           </div>
           <div class="products__item-a-plus">
             <a href="#"><img src="http://placehold.it/150x200"></a>
+            <a href="#"><img src="http://placehold.it/150x50"></a>
           </div>
           <div class="products__item-kvast">
             <a href="#"><img src="http://placehold.it/150x200"></a>
+            <a href="#"><img src="http://placehold.it/150x50"></a>
           </div>
        </div>
      </div>
