--- a/nerds-index.html
+++ b/nerds-index.html
@@ -34,26 +34,32 @@
       <main class="container">
         <div class="slider">
           <div class="slider__list">
-            <div class="slider__item_word1">
+            <div class="slider__item">
             <h1>Долго, дорого, скурпулезно.</h1>
             <p>Математический выверенный дизайн
               для вашего сайта или мобильного приложения.</p>
             <a class="btn" href="#">Узнать больше</a>
             </div>
-            <div class="slider__item_word2">
-            <h1>qwerty</h1>
-            <p>wqerty</p>
+            <div class="slider__item">
+            <h1>Любим математику как никто другой</h1>
+            <p>Никакого креатива, только математиеские формулы для расчета идеальных пропорций.</p>
             <a class="btn" href="#">Узнать больше</a>
             </div>
-            <div class="slider__item_word3">
-            <h1>qwerty</h1>
-            <p>wqerty</p>
+            <div class="slider__item">
+            <h1>Только ночь, только хардкор</h1>
+            <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
             <a class="btn" href="#">Узнать больше</a>
             </div>
+          </div>
+        <div class="slider__controls">
+          <div class="slider__control_item_active">
+          </div>
+          <div class="slider__control_item">
           </div>
           <div class="slider__control_item">
           </div>
         </div>
+       </div>
         <div class="products">
           <article class="products_web">
            <img src="http://placehold.it/300x300">
