Подключены контентные изображения и файл стилей в создаваемую разметку.

--- a/nerds-index.html
+++ b/nerds-index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="main-header">
       <div class="container">
         <div class="small-logo">
-        <img src="http://placehold.it/75x25">
+        <img src="img/nerds-logo.png" width="160" height="60" alt="Нёрдс">
         </div>
         <nav class="main-navigation">
           <ul>
@@ -27,7 +28,7 @@
           </ul>
         </nav>
         <div class="user-block">
-          <a class="trash" href="#">Корзина</a>
+          <a class="trash" href="#"><img src="img/cart-icon.png" width="15" height="14" alt="Корзина">Корзина</a>
         </div>
         </div>
       </header>
@@ -39,16 +40,19 @@
             <p>Математический выверенный дизайн
               для вашего сайта или мобильного приложения.</p>
             <a class="btn" href="#">Узнать больше</a>
+            <img src="img/slider-1.png" width="760" height="431" alt="Slider1">
             </div>
             <div class="slider__item">
             <h1>Любим математику как никто другой</h1>
             <p>Никакого креатива, только математиеские формулы для расчета идеальных пропорций.</p>
             <a class="btn" href="#">Узнать больше</a>
+            <img src="img/slider-2.png" width="760" height="431" alt="Slider2">
             </div>
             <div class="slider__item">
             <h1>Только ночь, только хардкор</h1>
             <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
             <a class="btn" href="#">Узнать больше</a>
+            <img src="img/slider-3.png" width="760" height="431" alt="Slider3">
             </div>
           </div>
         <div class="slider__controls">
@@ -62,19 +66,19 @@
        </div>
         <div class="products">
           <article class="products_web">
-           <img src="http://placehold.it/300x300">
+           <img src="img/illustration-1.jpeg" width="300" height="145" alt="illustration">
            <h1>Веб-сайты</h1>
            <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
            <a class="btn" href="#">Заказать</a>
           </article>
          <article class="products_app">
-          <img src="http://placehold.it/300x300">
+          <img src="img/illustration-2.jpeg" width="300" height="145" alt="illustration">
           <h1>Приложения</h1>
           <p>Покорите топ-10 приложений в AppStore и Google Play</p>
           <a class="btn" href="#">Заказать</a>
         </article>
         <article class="products_presentation">
-         <img src="http://placehold.it/300x300">
+         <img src="img/illustration-3.jpeg" width="300" height="145" alt="illustration">
          <h1>Презентации</h1>
          <p>Вы даже не подозреваете, насколько вы изумительны!</p>
          <a class="btn" href="#">Заказать</a>
@@ -91,7 +95,7 @@
         </ul>
       </div>
       <div class="diagram">
-        <img src="http://placehold.it/175x125">
+        <img src="img/nerds-illustration.jpeg" width="360" height="208" alt="illustration">
         <p>С 2004 года людим точность во всем:</p>
         <table class="diagram_procent">
           <tr>
@@ -107,15 +111,15 @@
         </table>
       </div>
       <section class="works">
-        <a class="works_html_academy" href="#">html academy</a>
-        <a class="works_barbershop" href="#">Barbershop Borodinski</a>
-        <a class="works_pink" href="#">Pink</a>
-        <a class="works_mishka" href="#">Mishka</a>
+        <a class="works_html_academy" href="#"><img src="img/logo-1.png" width="200" height="67""></a>
+        <a class="works_barbershop" href="#"><img src="img/logo-2.png" width="209" height="90""></a>
+        <a class="works_pink" href="#"><img src="img/logo-3.png" width="185" height="52""></a>
+        <a class="works_mishka" href="#"><img src="img/logo-4.png" width="173" height="85""></a>
       </section>
     </main>
     <footer class="main-footer">
       <div class="container">
-        <img src="http://placehold.it/300x300">
+        <img src="img/map.jpeg" width="1440" height="416" alt="map">
         <section class="footer-contacts">
           <h1>nerds design studio</h1>
           <p>
@@ -125,9 +129,9 @@
             <a href="#">Напишите нам</a>
         </section>
         <section class="footer-social">
-          <a class="social-btn-vk" href="#">Вконтакте</a>
-          <a class="social-btn-fb" href="#">Фейсбук</a>
-          <a class="social-btn-inst" href="#">Инстаграм</a>
+          <a class="social-btn-vk" href="#"><img src="img/vk-icon.png" width="26" height="14" alt="vk"></a>
+          <a class="social-btn-fb" href="#"><img src="img/fb-icon.png" width="26" height="14" alt="fb"></a>
+          <a class="social-btn-inst" href="#"><img src="img/insta-icon.png" width="26" height="14" alt="insta"></a>
           <h1>Давайте дружить, это выгодно!</h1>
           <p>Скидка 10% для друзей из социальных сетей</p>
         </section>
