--- a/nerds-catalog.html
+++ b/nerds-catalog.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="main-header">
       <div class="container">
         <div class="small-logo">
-        <img src="http://placehold.it/75x25">
+        <img src="img/nerds-logo.png" width="160" height="60" alt="Нёрдс">
         </div>
         <nav class="main-navigation">
           <ul>
@@ -27,7 +28,7 @@
           </ul>
         </nav>
         <div class="user-block">
-          <a class="trash" href="#">Корзина</a>
+          <a class="trash" href="#"><img src="img/cart-icon.png" width="15" height="14" alt="Корзина">Корзина</a>
         </div>
       </div>
     </header>
@@ -39,9 +40,8 @@
           <div id="range-slider">
           <input type="range" min="0" max="15000" step="50" multiple>
           </div>
-          <label>От<input></label>
-          <label>До<input></label>
-          <p>До</p>
+          <label>От<input type="text"></label>
+          <label>До<input type="text"></label>
         </div>
         <div class="type">
           <p class="type-title">Сетка</p>
@@ -82,33 +82,33 @@
       <div class="products">
         <div class="products__item">
           <div class="products__item-sedona">
-            <a href="#"><img src="http://placehold.it/150x200"></a>
-            <a href="#"><img src="http://placehold.it/150x50"></a>
+            <a href="#"><img src="img/img-sedona.png" width="360" height="575" alt="Sedona"></a>
+            <a href="#"><img src="img/white_back_copy.jpeg" width="360" height="230" alt="Sedona_"></a>
           </div>
           <div class="products__item-pink">
-            <a href="#"><img src="http://placehold.it/150x200"></a>
-            <a href="#"><img src="http://placehold.it/150x50"></a>
+            <a href="#"><img src="img/img-pink.png" width="360" height="575" alt="Pink"></a>
+            <a href="#"><img src="img/white_back_copy.jpeg" width="360" height="230" alt="Pink_"></a>
           </div>
           <div class="products__item-barbershop">
-            <a href="barbershop"><img src="http://placehold.it/150x200"></a>
-            <a href="#"><img src="http://placehold.it/150x50"></a>
+            <a href="barbershop"><img src="img/img-barbershop.png" width="360" height="575" alt="Barbershop"></a>
+            <a href="#"><img src="img/white_back_copy.jpeg" width="360" height="230" alt="Barbershop_"></a>
           </div>
           <div class="products__item-mishka">
-            <a href="#"><img src="http://placehold.it/150x200"></a>
-            <a href="#"><img src="http://placehold.it/150x50"></a>
+            <a href="#"><img src="img/img-mishka.png" width="360" height="575" alt="Mishka"></a>
+            <a href="#"><img src="img/white_back_copy.jpeg" width="360" height="230" alt="Mishka_"></a>
           </div>
           <div class="products__item-a-plus">
-            <a href="#"><img src="http://placehold.it/150x200"></a>
-            <a href="#"><img src="http://placehold.it/150x50"></a>
+            <a href="#"><img src="img/img-aplus.png" width="360" height="575" alt="Aplus"></a>
+            <a href="#"><img src="img/white_back_copy.jpeg" width="360" height="230" alt="Aplus_"></a>
           </div>
           <div class="products__item-kvast">
-            <a href="#"><img src="http://placehold.it/150x200"></a>
-            <a href="#"><img src="http://placehold.it/150x50"></a>
+            <a href="#"><img src="img/img-kvast.png" width="360" height="575" alt="Kvast"></a>
+            <a href="#"><img src="img/white_back_copy.jpeg" width="360" height="230" alt="Kvast_"></a>
           </div>
        </div>
      </div>
     <div class="page-number">
-       <a class="page-number_item" href="#">1</a>
+       <a class="page-number_item" href="#"><img src="img/page active.png" width="50" height="49">1</a>
        <a class="page-number_item" href="#">2</a>
        <a class="page-number_item" href="#">3</a>
        <a class="page-number_item" href="#">Следующая</a>
@@ -116,7 +116,7 @@
     </main>
     <footer class="main-footer">
       <div class="container">
-        <img src="http://placehold.it/300x300">
+        <img src="img/map.jpeg" width="1440" height="416" alt="map">
          <section class="footer-contacts">
           <h1>nerds design studio</h1>
           <p>
@@ -126,9 +126,9 @@
             <a href="#">Напишите нам</a>
         </section>
         <section class="footer-social">
-          <a class="social-btn-vk" href="#">Вконтакте</a>
-          <a class="social-btn-fb" href="#">Фейсбук</a>
-          <a class="social-btn-inst" href="#">Инстаграм</a>
+          <a class="social-btn-vk" href="#"><img src="img/vk-icon.png" width="26" height="14" alt="vk"></a>
+          <a class="social-btn-fb" href="#"><img src="img/fb-icon.png" width="26" height="14" alt="fb"></a>
+          <a class="social-btn-inst" href="#"><img src="img/insta-icon.png" width="26" height="14" alt="insta"></a>
           <h1>Давайте дружить, это выгодно!</h1>
           <p>Скидка 10% для друзей из социальных сетей</p>
         </section>
