--- a/nerds-catalog.html
+++ b/nerds-catalog.html
@@ -83,27 +83,27 @@
         <div class="products__item">
           <div class="products__item-sedona">
             <a href="#"><img src="img/img-sedona.png" width="360" height="575" alt="Sedona"></a>
-            <a href="#"><img src="img/white_back_copy.jpeg" width="360" height="230" alt="Sedona_"></a>
+            <a href="#"><img src="img/white_back_copy.jpg" width="360" height="230" alt="Sedona_"></a>
           </div>
           <div class="products__item-pink">
             <a href="#"><img src="img/img-pink.png" width="360" height="575" alt="Pink"></a>
-            <a href="#"><img src="img/white_back_copy.jpeg" width="360" height="230" alt="Pink_"></a>
+            <a href="#"><img src="img/white_back_copy.jpg" width="360" height="230" alt="Pink_"></a>
           </div>
           <div class="products__item-barbershop">
             <a href="barbershop"><img src="img/img-barbershop.png" width="360" height="575" alt="Barbershop"></a>
-            <a href="#"><img src="img/white_back_copy.jpeg" width="360" height="230" alt="Barbershop_"></a>
+            <a href="#"><img src="img/white_back_copy.jpg" width="360" height="230" alt="Barbershop_"></a>
           </div>
           <div class="products__item-mishka">
             <a href="#"><img src="img/img-mishka.png" width="360" height="575" alt="Mishka"></a>
-            <a href="#"><img src="img/white_back_copy.jpeg" width="360" height="230" alt="Mishka_"></a>
+            <a href="#"><img src="img/white_back_copy.jpg" width="360" height="230" alt="Mishka_"></a>
           </div>
           <div class="products__item-a-plus">
             <a href="#"><img src="img/img-aplus.png" width="360" height="575" alt="Aplus"></a>
-            <a href="#"><img src="img/white_back_copy.jpeg" width="360" height="230" alt="Aplus_"></a>
+            <a href="#"><img src="img/white_back_copy.jpg" width="360" height="230" alt="Aplus_"></a>
           </div>
           <div class="products__item-kvast">
             <a href="#"><img src="img/img-kvast.png" width="360" height="575" alt="Kvast"></a>
-            <a href="#"><img src="img/white_back_copy.jpeg" width="360" height="230" alt="Kvast_"></a>
+            <a href="#"><img src="img/white_back_copy.jpg" width="360" height="230" alt="Kvast_"></a>
           </div>
        </div>
      </div>
@@ -116,7 +116,7 @@
     </main>
     <footer class="main-footer">
       <div class="container">
-        <img src="img/map.jpeg" width="1440" height="416" alt="map">
+        <img src="img/map.jpg" width="1440" height="416" alt="map">
          <section class="footer-contacts">
           <h1>nerds design studio</h1>
           <p>
