--- a/nerds-index.html
+++ b/nerds-index.html
@@ -66,19 +66,19 @@
        </div>
         <div class="products">
           <article class="products_web">
-           <img src="img/illustration-1.jpeg" width="300" height="145" alt="illustration">
+           <img src="img/illustration-1.jpg" width="300" height="145" alt="illustration">
            <h1>Веб-сайты</h1>
            <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
            <a class="btn" href="#">Заказать</a>
           </article>
          <article class="products_app">
-          <img src="img/illustration-2.jpeg" width="300" height="145" alt="illustration">
+          <img src="img/illustration-2.jpg" width="300" height="145" alt="illustration">
           <h1>Приложения</h1>
           <p>Покорите топ-10 приложений в AppStore и Google Play</p>
           <a class="btn" href="#">Заказать</a>
         </article>
         <article class="products_presentation">
-         <img src="img/illustration-3.jpeg" width="300" height="145" alt="illustration">
+         <img src="img/illustration-3.jpg" width="300" height="145" alt="illustration">
          <h1>Презентации</h1>
          <p>Вы даже не подозреваете, насколько вы изумительны!</p>
          <a class="btn" href="#">Заказать</a>
@@ -95,7 +95,7 @@
         </ul>
       </div>
       <div class="diagram">
-        <img src="img/nerds-illustration.jpeg" width="360" height="208" alt="illustration">
+        <img src="img/nerds-illustration.jpg" width="360" height="208" alt="illustration">
         <p>С 2004 года людим точность во всем:</p>
         <table class="diagram_procent">
           <tr>
@@ -119,7 +119,7 @@
     </main>
     <footer class="main-footer">
       <div class="container">
-        <img src="img/map.jpeg" width="1440" height="416" alt="map">
+        <img src="img/map.jpg" width="1440" height="416" alt="map">
         <section class="footer-contacts">
           <h1>nerds design studio</h1>
           <p>
