--- a/nerds-index0.html
+++ b/nerds-index0.html
@@ -16,7 +16,7 @@
         </div>
       </div>
       </header>
-  /*    <main class="container">*/
+   <main class="container">*/
         <div class="slider">
           <div class="slider__list">
             <div class="slider__item">
@@ -35,7 +35,7 @@
           </div>
         </div>
        </div>
-        <div class="products">
+         <div class="products">
           <article class="products_web">
           </article>
          <article class="products_app">
@@ -44,21 +44,23 @@
          </article>
         </div>
         <div class="about">
+        <div class="features">
        </div>
        <div class="diagram">
         <table class="diagram_procent">
         </table>
       </div>
+      </div>
       <section class="works">
       </section>
     </main>
-    <footer class="main-footer">
-      /*<div class="container">/*
+      <footer class="main-footer">
+      <div class="container">
         <section class="footer-contacts">
         </section>
         <section class="footer-social">
         </section>
-      </div>*/
+      </div>
     </footer>
   </body>
 </html>
