Создание сеток, корректировка #4

--- a/nerds-catalog.html
+++ b/nerds-catalog.html
@@ -32,7 +32,7 @@
         </div>
       </div>
     </header>
-    <main class="container">
+    <main class="container clearfix">
         <h1 class="main-title">Магазин готовых шаблонов</h1>
       <form>
         <div class="price">
@@ -79,7 +79,7 @@
           </li>
         </ul>
       </div>
-      <div class="products">
+      <div class="products_catalog">
         <div class="products__item">
           <div class="products__item-sedona">
             <a href="#"><img src="img/img-sedona.png" width="360" height="575" alt="Sedona"></a>
