--- a/nerds-index.html
+++ b/nerds-index.html
@@ -85,6 +85,7 @@
         </article>
        </div>
        <div class="about">
+         <div class="features">
         <h1>Мы-маленькая, но гордая дизайн-студия из Краснодара.</h1>
         <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем непокладая рук, как роботы.</p>
         <p>Выполняем заказы на разработку:</p>
@@ -110,6 +111,7 @@
           </tr>
         </table>
       </div>
+     </div>
       <section class="works">
         <a class="works_html_academy" href="#"><img src="img/logo-1.png" width="200" height="67""></a>
         <a class="works_barbershop" href="#"><img src="img/logo-2.png" width="209" height="90""></a>
@@ -118,8 +120,8 @@
       </section>
     </main>
     <footer class="main-footer">
+      <img src="img/map.jpg" width="1440" height="416" alt="map">
       <div class="container">
-        <img src="img/map.jpg" width="1440" height="416" alt="map">
         <section class="footer-contacts">
           <h1>nerds design studio</h1>
           <p>
