--- a/nerds-index.html
+++ b/nerds-index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic">
     <link rel="stylesheet" href="css/normalize.css">
     <link href="css/style.css" rel="stylesheet">
+
   </head>
   <body>
     <header class="main-header">
@@ -38,39 +39,36 @@
         <div class="slider">
           <div class="slider__list">
             <div class="slider__item">
-            <h1>Долго, дорого, скурпулезно.</h1>
-            <p>Математический выверенный дизайн
-              для вашего сайта или мобильного приложения.</p>
+            <div class="slide__title">Долго, дорого, скрупулезно.</div>
+            <p>Математический выверенный дизайн<br>
+      для вашего сайта или мобильного приложения.</p>
             <a class="btn" href="#">Узнать больше</a>
-            <img src="img/slider-1.png" width="760" height="431" alt="Slider1">
             </div>
             <div class="slider__item">
-            <h1>Любим математику как никто другой</h1>
-            <p>Никакого креатива, только математиеские формулы для расчета идеальных пропорций.</p>
+            <div class="slide__title">Любим математику как никто другой</div>
+            <p>Никакого креатива, только математиеские формулы<br>
+             для расчета идеальных пропорций.</p>
             <a class="btn" href="#">Узнать больше</a>
-            <img src="img/slider-2.png" width="760" height="431" alt="Slider2">
             </div>
             <div class="slider__item">
-            <h1>Только ночь, только хардкор</h1>
-            <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
+            <div class="slide__title">Только ночь,<br>только хардкор</div>
+            <p>Работать днем, как все? Мы против этого.<br>
+              Ближе к полуночи работа только начинается.</p>
             <a class="btn" href="#">Узнать больше</a>
-            <img src="img/slider-3.png" width="760" height="431" alt="Slider3">
-            </div>
           </div>
         <div class="slider__controls">
-          <div class="slider__control_item_active">
-          </div>
-          <div class="slider__control_item">
-          </div>
-          <div class="slider__control_item">
-          </div>
+          <i class="active"></i>
+          <i></i>
+          <i></i>
         </div>
-       </div>
+      </div>
+   </div>
         <div class="products">
           <article class="products_web">
            <img src="img/illustration-1.jpg" width="300" height="145" alt="illustration">
-           <h1>Веб-сайты</h1>
-           <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+           <h1 >Веб-сайты</h1>
+           <p>Мир никогда не будет прежним <br>
+            после того как увидит ваш сайт!</p>
            <a class="btn" href="#">Заказать</a>
           </article>
          <article class="products_app">
@@ -82,15 +80,18 @@
         <article class="products_presentation">
          <img src="img/illustration-3.jpg" width="300" height="145" alt="illustration">
          <h1>Презентации</h1>
-         <p>Вы даже не подозреваете, насколько вы изумительны!</p>
+         <p>Вы даже не подозреваете,<br>
+           насколько вы изумительны!</p>
          <a class="btn" href="#">Заказать</a>
         </article>
        </div>
        <div class="about">
          <div class="features">
-        <h1>Мы-маленькая, но гордая дизайн-студия из Краснодара.</h1>
-        <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем непокладая рук, как роботы.</p>
-        <p>Выполняем заказы на разработку:</p>
+        <h1>Мы - маленькая, но гордая<br>
+          дизайн - студия из Краснодара.</h1>
+        <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br>
+           превыше креатива. Работаем непокладая рук, как роботы.</p>
+        <h2>Выполняем заказы на разработку:</h2>
         <ul>
           <li>Веб-сайтов любой сложности</li>
           <li>Мобильных приложений для IOS и Android</li>
@@ -100,11 +101,11 @@
       <div class="diagram">
         <img src="img/nerds-illustration.jpg" width="360" height="208" alt="illustration">
         <p>С 2004 года людим точность во всем:</p>
-        <table class="diagram_procent">
-          <tr>
-            <td>146%</td>
-            <td>100%</td>
-            <td>50%</td>
+        <table class="diagram__procent">
+          <tr class="diagram__procent_amount">
+            <td>146 <sup>% </sup></td>
+            <td>100<sup>%</sup></td>
+            <td>50<sup>%</sup></td>
           </tr>
           <tr>
             <td>Уровень самоотдачи</td>
