--- a/nerds-index.html
+++ b/nerds-index.html
@@ -35,34 +35,37 @@
         </div>
         </div>
       </header>
-      <main class="container">
+      <main>
         <div class="slider">
+        <div class="container">
           <div class="slider__list">
             <div class="slider__item">
             <div class="slide__title">Долго, дорого, скрупулезно.</div>
             <p>Математический выверенный дизайн<br>
       для вашего сайта или мобильного приложения.</p>
-            <a class="btn" href="#">Узнать больше</a>
+            <a class="btn btn1" href="#">Узнать больше</a>
             </div>
             <div class="slider__item">
             <div class="slide__title">Любим математику как никто другой</div>
             <p>Никакого креатива, только математиеские формулы<br>
              для расчета идеальных пропорций.</p>
-            <a class="btn" href="#">Узнать больше</a>
+            <a class="btn btn2" href="#">Узнать больше</a>
             </div>
             <div class="slider__item">
             <div class="slide__title">Только ночь,<br>только хардкор</div>
             <p>Работать днем, как все? Мы против этого.<br>
               Ближе к полуночи работа только начинается.</p>
-            <a class="btn" href="#">Узнать больше</a>
+            <a class="btn btn3" href="#">Узнать больше</a>
           </div>
         <div class="slider__controls">
           <i class="active"></i>
           <i></i>
           <i></i>
         </div>
+        </div>
       </div>
-   </div>
+     </div>
+    <div class="container">
         <div class="products">
           <article class="products_web">
            <img src="img/illustration-1.jpg" width="300" height="145" alt="illustration">
@@ -75,19 +78,21 @@
           <img src="img/illustration-2.jpg" width="300" height="145" alt="illustration">
           <h1>Приложения</h1>
           <p>Покорите топ-10 приложений в AppStore и Google Play</p>
-          <a class="btn" href="#">Заказать</a>
+          <a class="btn btn2" href="#">Заказать</a>
         </article>
         <article class="products_presentation">
          <img src="img/illustration-3.jpg" width="300" height="145" alt="illustration">
          <h1>Презентации</h1>
          <p>Вы даже не подозреваете,<br>
            насколько вы изумительны!</p>
-         <a class="btn" href="#">Заказать</a>
+         <a class="btn btn3" href="#">Заказать</a>
         </article>
+       </div>
+       <div class="line">
        </div>
        <div class="about">
          <div class="features">
-        <h1>Мы - маленькая, но гордая<br>
+        <h1>Мы &#8212; маленькая, но гордая<br>
           дизайн - студия из Краснодара.</h1>
         <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br>
            превыше креатива. Работаем непокладая рук, как роботы.</p>
@@ -103,11 +108,11 @@
         <p>С 2004 года людим точность во всем:</p>
         <table class="diagram__procent">
           <tr class="diagram__procent_amount">
-            <td>146 <sup>% </sup></td>
+            <td>146<sup>%</sup></td>
             <td>100<sup>%</sup></td>
             <td>50<sup>%</sup></td>
           </tr>
-          <tr>
+          <tr class="diagram__procent_item">
             <td>Уровень самоотдачи</td>
             <td>Соблюдение сроков</td>
             <td>Минимальная предоплата</td>
@@ -115,12 +120,25 @@
         </table>
       </div>
      </div>
+     <div class="line">
+     </div>
       <section class="works">
-        <a class="works_html_academy" href="#"><img src="img/logo-1.png" width="200" height="67""></a>
-        <a class="works_barbershop" href="#"><img src="img/logo-2.png" width="209" height="90""></a>
-        <a class="works_pink" href="#"><img src="img/logo-3.png" width="185" height="52""></a>
-        <a class="works_mishka" href="#"><img src="img/logo-4.png" width="173" height="85""></a>
+        <a class="works_html_academy" href="#">
+          <div class="works__item"><img src="img/logo-1.png" width="200" height="67""></div>
+          </a>
+        <a class="works_barbershop" href="#">
+          <div class="works__item"><img src="img/logo-2.png" width="209" height="90""></div>
+          </a>
+        <a class="works_pink" href="#">
+          <div class="works__item"><img src="img/logo-3.png" width="185" height="52""></div>
+          </a>
+        <a class="works_mishka" href="#">
+          <div class="works__item"><img src="img/logo-4.png" width="173" height="85""></div>
+          </a>
       </section>
+      <div class="line">
+      </div>
+    </div>
     </main>
     <footer class="main-footer">
       <img src="img/map.jpg" width="1440" height="416" alt="map">
