--- a/nerds-index.html
+++ b/nerds-index.html
@@ -39,8 +39,9 @@
         <div class="slider">
         <div class="container">
           <div class="slider__list">
-            <div class="slider__item">
-            <div class="slide__title">Долго, дорого, скрупулезно.</div>
+            <div class="slider__item clearfix">
+            <div class="slide__title">Долго, дорого,<br>
+            скрупулезно.</div>
             <p>Математический выверенный дизайн<br>
       для вашего сайта или мобильного приложения.</p>
             <a class="btn btn1" href="#">Узнать больше</a>
@@ -93,14 +94,14 @@
        <div class="about">
          <div class="features">
         <h1>Мы &#8212; маленькая, но гордая<br>
-          дизайн - студия из Краснодара.</h1>
+          дизайн-студия из Краснодара.</h1>
         <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br>
            превыше креатива. Работаем непокладая рук, как роботы.</p>
         <h2>Выполняем заказы на разработку:</h2>
         <ul>
-          <li>Веб-сайтов любой сложности</li>
-          <li>Мобильных приложений для IOS и Android</li>
-          <li>Слайдшоу и видео для корпоративных презентаций</li>
+          <li><span>Веб-сайтов любой сложности</li>
+          <li><span>Мобильных приложений для IOS и Android</li>
+          <li><span>Слайдшоу и видео для корпоративных презентаций</li>
         </ul>
       </div>
       <div class="diagram">
@@ -125,10 +126,14 @@
       <section class="works">
         <a class="works_html_academy" href="#">
           <div class="works__item"><img src="img/logo-1.png" width="200" height="67""></div>
-          </a>
+        </a>
+          <div class="line_vertical">
+          </div>
         <a class="works_barbershop" href="#">
           <div class="works__item"><img src="img/logo-2.png" width="209" height="90""></div>
-          </a>
+        </a>
+          <div class="line_vertical">
+          </div>
         <a class="works_pink" href="#">
           <div class="works__item"><img src="img/logo-3.png" width="185" height="52""></div>
           </a>
@@ -138,26 +143,28 @@
       </section>
       <div class="line">
       </div>
-    </div>
+      </div>
     </main>
     <footer class="main-footer">
-      <img src="img/map.jpg" width="1440" height="416" alt="map">
+      <div class="footer-map">
+      <img src="img/map-marker.png" width="1440" height="416" alt="map">
       <div class="container">
         <section class="footer-contacts">
-          <h1>nerds design studio</h1>
+          <h3>nёrds design studio</h3>
           <p>
-            191186, Санкт-Петербург,
-            ул.Б.Конюшенная,д.19/8
-            тел.+7(812)275-75-75</p>
-            <a href="#">Напишите нам</a>
+            191186, Санкт-Петербург,<br>
+            ул. Б. Конюшенная, д. 19/8<br>
+            <span class="padding">тел.+7(812)275-75-75</span></p>
+            <a class="btn" href="#">Напишите нам</a>
         </section>
         <section class="footer-social">
-          <a class="social-btn-vk" href="#"><img src="img/vk-icon.png" width="26" height="14" alt="vk"></a>
-          <a class="social-btn-fb" href="#"><img src="img/fb-icon.png" width="26" height="14" alt="fb"></a>
-          <a class="social-btn-inst" href="#"><img src="img/insta-icon.png" width="26" height="14" alt="insta"></a>
-          <h1>Давайте дружить, это выгодно!</h1>
-          <p>Скидка 10% для друзей из социальных сетей</p>
+          <a class="social-btn social-btn-vk" href="#"></a>
+          <a class="social-btn social-btn-fb" href="#"></a>
+          <a class="social-btn social-btn-inst" href="#"></a>
+          <p>Давайте дружить, это выгодно!<br>
+          Скидка 10% для друзей из социальных сетей</p>
         </section>
+      </div>
       </div>
     </footer>
   </body>
