--- a/nerds-index.html
+++ b/nerds-index.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic">
     <link rel="stylesheet" href="css/normalize.css">
     <link href="css/style.css" rel="stylesheet">
-
   </head>
   <body>
     <header class="main-header">
@@ -153,16 +152,20 @@
           <h3>nёrds design studio</h3>
           <p>
             191186, Санкт-Петербург,<br>
-            ул. Б. Конюшенная, д. 19/8<br>
-            <span class="padding">тел.+7(812)275-75-75</span></p>
+            ул. Б. Конюшенная, д. 19/8<br><br>
+            тел. + 7(812) 275-75-75</p>
             <a class="btn" href="#">Напишите нам</a>
         </section>
-        <section class="footer-social">
-          <a class="social-btn social-btn-vk" href="#"></a>
-          <a class="social-btn social-btn-fb" href="#"></a>
-          <a class="social-btn social-btn-inst" href="#"></a>
-          <p>Давайте дружить, это выгодно!<br>
-          Скидка 10% для друзей из социальных сетей</p>
+        <section class="footer-social clearfix">
+          <div class="social-btn">
+          <a class="social-btn-vk" href="#"></a>
+          <a class="social-btn-fb" href="#"></a>
+          <a class="social-btn-inst" href="#"></a>
+          </div>
+          <div class="social_text">
+          <p class="social_text_big">Давайте дружить, это выгодно!</p>
+          <p>Скидка 10% для друзей из социальных сетей</p>
+         </div>
         </section>
       </div>
       </div>
